netcfg (1.17) UNRELEASED; urgency=low

  [ Thomas Hood ]
  * Don't make 'localhost.localdomain' the canonical hostname of 127.0.0.1.
    See Oct 2005 debian-devel discussion with Subject: localhost.localdomain,
    e.g., http://lists.debian.org/debian-devel/2005/10/msg00559.html

  [ Frans Pop ]
  * Remove netcfg-dhcp udeb as it is no longer used and maintained.
    The full netcfg is used instead. Closes: #329885.

 -- Frans Pop <fjp@debian.org>  Wed, 19 Oct 2005 16:16:49 +0200

netcfg (1.16) unstable; urgency=low

  * Use a less confising progress bar string for base-installer step.
  * Temporarily switch to statically linking libiw, since the kde transition
    is holding the new version out of testing right now.

  [ Updated translations ]
  * Czech (cs.po) by Miroslav Kure
  * German (de.po) by Jens Seidel
  * Basque (eu.po) by Piarres Beobide
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Italian (it.po) by Giuseppe Sacco
  * Japanese (ja.po) by Kenshi Muto
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Macedonian (mk.po) by Georgi Stanojevski
  * Bokmål, Norwegian (nb.po) by Bjørn Steensrud
  * Polish (pl.po) by Bartosz Fenski
  * Portuguese (pt.po) by Miguel Figueiredo
  * Romanian (ro.po) by Eddy Petrisor
  * Slovak (sk.po) by Peter Mann
  * Swedish (sv.po) by Daniel Nylander
  * Tagalog (tl.po) by Eric Pareja

 -- Joey Hess <joeyh@debian.org>  Sun,  9 Oct 2005 19:05:16 -0400

netcfg (1.15) unstable; urgency=low

  [ Geert Stappers ]
  * Use the macro for the resolve file in dhcp.c
    (patch by Torsten Landschoff from #328646).

  [ Joey Hess ]
  * Add ppc64 to arch lists. Closes: #328087

  [ Updated translations ]
  * Greek, Modern (1453-) (el.po) by Greek Translation Team
  * Galician (gl.po) by Jacobo Tarrio
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Dutch (nl.po) by Bart Cornelis
  * Polish (pl.po) by Bartosz Fenski
  * Slovak (sk.po) by Peter Mann
  * Tagalog (tl.po) by Eric Pareja
