@@ -1,5 +1,9 @@
 netcfg (1.17) UNRELEASED; urgency=low
 
+  [ Geert Stappers ]
+  * Create dhclient config files.
+    So netcfg DHCP requests can be identified.
+
   [ Thomas Hood ]
   * Don't make 'localhost.localdomain' the canonical hostname of 127.0.0.1.
     See Oct 2005 debian-devel discussion with Subject: localhost.localdomain,
